[flake8]
max-line-length = 100

[metadata]
name = yang-scan
summary = Pyang plugin scanning YANG modules
license = Apache-2.0
keywords = YANG
classifier = 
           Development Status :: 3 - Alpha

           Intended Audience :: Developers
           Intended Audience :: System Administrators
           Intended Audience :: Telecommunications Industry
           Topic :: System :: Networking
           Topic :: System :: Networking :: Monitoring

           License :: OSI Approved :: MIT License

           Programming Language :: Python :: 3.8
           Programming Language :: Python :: 3.9
           Programming Language :: Python :: 3.10


[files]
packages =
    yang_scan

[entry_points]
pyang.plugin =
    yang-scan = yang_scan:pyang_plugin_init
